--- a/src/main/webapp/WEB-INF/pages/test/index.html
+++ b/src/main/webapp/WEB-INF/pages/test/index.html
@@ -1,277 +1,60 @@
-
-<!DOCTYPE html>
+## layout("ulab.html",{title:"测试"}){
+<html>
 <head>
-    <meta charset="UTF-8" name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <title>ECharts</title>
-    <link rel="shortcut icon" href="${contextPath!}/static/img/favicon.png">
-    <link rel="stylesheet" href="${contextPath!}/static/css/common.css">
-    <link rel="stylesheet" href="${contextPath!}/static/css/example.css">
-    <style>
-        body{
-            margin: 0;
-
-        }
-        #main{
-            width:60%;
-            margin:0 auto;
-        }
-        #switch.btn {
-            position: relative;
-            left:3em;
-            top: -5px;
-            padding:7px 10px;
-            z-index: 1000;
-            font-size: 1em;
-            border-radius: 5px;
-        }
-        iframe{
-            width:100%;
-            height:640px;
-        }
-    </style>
-
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>测试</title>
+<style>
+p{color:red;font-size: 16px}
+</style>
 </head>
-
 <body>
-<!-- 为ECharts准备一个具备大小（宽高）的Dom -->
-<main id="main">
-    <div id="chart" ></div>
-    <!--<iframe style="display: none" id="iframe" scrolling="no" frameborder="0" src="${contextPath!}/static/tflatMap.htmlhtml"></iframe>-->
-</main>
-<!-- ECharts单文件引入 -->
-<script type="text/javascript" src="${contextPath!}/static/js/jquery.min.js"></script>
-<script src="${contextPath!}/static/asserts/echarts/echarts.js"></script>
-<script src="${contextPath!}/static/asserts/js/require.js"></script>
-<!-- 引入 ECharts-X 主文件 -->
-<script src="${contextPath!}/static/asserts/echarts/echarts-x.js"></script>
-<script type="text/javascript">
-    // 路径配置
-    require.config({
-        paths: {
-            'echarts': '${contextPath!}/static/dep/echarts/build',
-            'echarts-x': '${contextPath!}/static/dep/echarts-x/build'
-        }
-    });
-    // 然后就可以动态加载图表进行绘制啦
-    require([
-        'echarts',
-        'echarts-x',
-        // ECharts-X 中 map3d 的地图绘制基于 ECharts 中的 map。
-        'echarts/chart/map',
-        'echarts-x/chart/map3d'
-    ])
-
-</script>
-
-<header id="header">
-    <h1><a href="">ECharts-X</a></h1>
-    <div id="toolbar">
-        <button id="echarts2" class="btn">echarts2平面地图</button>
-        <button id="bigger" class="btn">放大</button>
-        <button id="smaller" class="btn">缩小</button>
-    </div>
-    <button id="switch" class="btn">点击切换显示方式</button>
-</header>
-
-<script id="code-source">
-	$.post("${contextPath!}/test/labAjax",{},function(data){
-		console.log(data)
-		loadMap(data);
-	})
-   
-   function loadMap(mData){
-		 //myChart.showLoading();
-
-		  var markPointStyle = {
-	                normal: {
-	                    color: 'red'
-	                }
-	            };
-	            // Airport: [name（机场名？）, city, country, longitude（经度）, latitude（纬度）]
-	            //map和forEach都可以对数组进行遍历，区别是map可以返回一个修改后的数组，但不影响原数组
-	          /*   var airports = data.airports.map(function (item) {
-	                //返回带有标记样式和经纬度的对象
-	                return {
-	                    itemStyle: markPointStyle,
-	                    geoCoord: [item[3], item[4]]
-	                }
-	            }); 
-	            console.log(airports) */
-	            var airports=getAirports(mData,markPointStyle);
-	            // Route: [airlineIndex(航空公司编号), sourceAirportIndex（起点）, destinationAirportIndex（终点）]
-	            var opts = {
-	                title: {
-	                    text: '海联地图数据测试中心',
-	                    subtext: 'U-lab项目demo',
-	                    sublink: 'http://openflights.org/data.html',
-	                    x: 'center',
-	                    y: 'top',
-	                    textStyle: {
-	                        color: 'white'
-	                    }
-	                },
-	                legend: {
-	                    show: true,
-	                    //   遍历航空公司名称显示图例
-	                    data: legendData(mData),
-	                    selected: {},
-	                    x: 'left',
-	                    orient: 'vertical',
-	                    textStyle: {
-	                        color: 'white'
-	                    }
-	                },
-	                tooltip: {
-	                    formatter: '{b}'
-	                },
-	                series: [{
-	                    type: 'map3d',
-	                    mapType: 'world',
-	                    flat: false, /*是否使用平面图*/
-	                    flatAngle: 0,
-	                    baseLayer: {
-	                        backgroundColor: '',
-	                        backgroundImage: '${contextPath!}/static/img/earth.jpg'
-	                    },
-	                    itemStyle: {
-	                        normal: {
-	                            borderWidth: 1,
-	                            borderColor: 'yellow',
-	                            areaStyle: {
-	                                color: 'rgba(0, 0, 0, 0)'
-	                            }
-	                        }
-	                    },
-	                    markPoint: {
-	                        symbol:"heart",
-	                        effect: {
-	                            shadowBlur: 0.2
-	                        },
-	                        large: true,
-	                        symbolSize : 15,
-	                        data: airports
-	                    },
-	                    roam:{
-	                        autoRotateAfterStill: 30,
-	                        focus: 'China'
-	                    }
-	                }]
-	            };
-
-	            //默认选中华北
-	            opts.legend.data.forEach(function (name) {
-	                if (name.indexOf('中心') >= 0) {
-	                    opts.legend.selected[name] = true;
-	                } else {
-	                    opts.legend.selected[name] = false;
-	                }
-	            });
-	             for(var x=0;x<mData.length;x++){
-	            	 opts.series.push({
-	                        type: 'map3d',
-	                        name: mData[x].shortname,
-	                        markLine: {
-	                            effect: {
-	                                show: true
-	                            },
-	                            distance:1,
-	                            data: lineGeoCoord(mData[x])
-	                        }
-	                    });
-	            }
-	          
-	            myChart.setOption(opts);
-
-	            myChart.hideLoading();
-	}
-	//加载全部位置属性
-	function getAirports(data,markPointStyle){
-		var d = new Array();
-		for(var i=0;i<data.length;i++){
-			var pitem0 = new Object();
-			pitem0.geoCoord=[data[i].lng,data[i].lat];
-			pitem0.itemStyle=markPointStyle;
-			d.push(pitem0);
-			for(var x=0;x<data[i].clist.length;x++){
-				var obj=data[i].clist[x];
-				var item0 = new Object();
-				item0.geoCoord=[obj.lng,obj.lat];
-				item0.itemStyle=markPointStyle;
-				d.push(item0);
-			}
-		}
-		return d;
-	}
+	 <p>实验室总数</p>
+	<div>实验室总数：<span id="lab_all_count"></span></div> 
+	<!-- 根据产线维度统计实验室数量 -->
+	<p> 根据产线维度统计实验室数量 </p>
+	<div>
+		<ul id="pro_line">
+		</ul>
+	</div>
+	<!-- 实验室区域数量统计：大洲 国家 -->
+	<p>实验室区域数量统计：大洲 国家</p>
+	<div>实验室分布<span id="area_num"></span>大洲，<span id="country_num"></span>国家</div>
+	<!-- 按照实验室四大类统计数量 -->
+	<p>按照实验室四大类统计数量 </p>
+	<div>
+		<ul id="lab_type_statis">
+		</ul>
+	</div>
 	
-	 //legend标题
-	function legendData(data){
-		var legendData = [];
-		for(var i=0;i<data.length;i++) {
-			var name = (data[i].shortname==null?data[i].shortname:data[i].shortname);// 名称
-			legendData.push(name);
-		}
-		return legendData;
-	}
-	//拼接地图迁徙起点-终点坐标
-	/**
-	 * [
-	    [{geoCoord:'起点坐标'},{geoCoord:'终点坐标'}],
-	    [{geoCoord:'起点坐标'},{geoCoord:'终点坐标'}]
-	]
-	 */
-	function lineGeoCoord(data){
-		var d = new Array();
-		for(var x=0;x<data.clist.length;x++){
-			var obj=data.clist[x];
-			var e= new Array();
-			var item0 = new Object();
-			item0.geoCoord=[obj.plng,obj.plat];
-			e.push(item0);
-			var item1 = new Object();
-			item1.geoCoord=[obj.lng,obj.lat];
-			e.push(item1);
-			d.push(e);
-		}
-		return d;
-	}
-</script>
+	<!-- 按照实验室实验室性质统计数量 -->
+	<p>按照实验室实验室性质统计数量</p>
+	<div>
+		<ul id="properties_code_statis">
+		</ul>
+	</div>
+	
+	<!-- 按照实验室生命周期（可开展实验）统计数量 -->
+	<p>按照实验室生命周期（可开展实验）统计数量</p>
+	<div>
+		<ul id="kz_lab_code_statis">
+		</ul>
+	</div>
+</body>
+</html>
 
 <script src="${contextPath!}/static/asserts/js/jquery-2.2.4.js"></script>
-<script src="${contextPath!}/static/js/flat.js"></script>
-<script src="${contextPath!}/static/js/boot.js"></script>
-<script src="${contextPath!}/static/js/main.js"></script>
+<script src="${contextPath!}/static/js/statistics.js?random=2"></script>
 <script>
-    $(function () {
-        var $main = $("#main");
-        var $chart = $("#chart");
-        var $iframe = $("#iframe");
-        var sphere = '<div id="chart" ></div>';
-        var iframe = '<iframe id="iframe" scrolling="no" frameborder="0" src="${contextPath!}/test/flatMap"></iframe>';
-        $("#echarts2").click(function () {
-            var $chart = $("#chart");
-            if($chart.length > 0){
-                $chart.remove();
-                $main.append(iframe)
-            }else{
-                $("#iframe").remove();
-                $main.append(sphere);
-                require(['start'],function (start) {
-                    setTimeout(function () {
-                        console.log($('#code-source').text())
-                        start.runCode($('#code-source').text())
-                    });
-
-                });
-            }
-        })
-
-    })
+var contextPath='${contextPath!}';
+//产线维度实验室数量统计
+$(document).ready(function () {
+	labNumStatis();
+	labAreaSpread();
+	
+	proLineStatis();
+	labTypeStatis();
+	labPropertiesStatis();
+	labLifeCycleStatis();
+});
 </script>
-<script>
-    if (document.location.href.indexOf('local') == -1) {
-        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3Fb78830c9a5dad062d08b90b2bc0cf5da' type='text/javascript'%3E%3C/script%3E"));
-    }
-</script>
-
-</body>
+##}
